default/objects/Merchant__c/Merchant__c.object-meta.xml
<CustomObject>
    <label>Merchant</label>
    <nameField>
        <label>Merchant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Merchants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>