default/objects/Merchant__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Merchants</relationshipLabel>
    <relationshipName>Merchants</relationshipName>
    <type>Lookup</type>
</CustomField>