default/objects/Merchant__c/fields/DELCO_ID__c.field-meta.xml
<CustomField>
    <fullName>DELCO_ID__c</fullName>
    <label>DELCO</label>
    <length>30</length>
    <type>Text</type>
</CustomField>