default/objects/Merchant__c/fields/DICO__c.field-meta.xml
<CustomField>
    <fullName>DICO__c</fullName>
    <label>DICO</label>
    <length>30</length>
    <type>Text</type>
</CustomField>