default/objects/Merchant__c/fields/ICO__c.field-meta.xml
<CustomField>
    <fullName>ICO__c</fullName>
    <label>ICO</label>
    <length>30</length>
    <type>Text</type>
</CustomField>