default/objects/Merchant__c/fields/Reg_Address__c.field-meta.xml
<CustomField>
    <fullName>Reg_Address__c</fullName>
    <label>Reg. Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>