default/objects/Merchant__c/fields/Site_Owner_Number__c.field-meta.xml
<CustomField>
    <fullName>Site_Owner_Number__c</fullName>
    <label>Site Owner Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>